--- a/style.css
+++ b/style.css
@@ -39,6 +39,9 @@ header{
 
 .container{
     display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
 
 .logo{
@@ -96,6 +99,8 @@ header{
     cursor: pointer;
     font-weight: 500;
     padding: 1em 2.5em;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
 }
 
 .mod{
@@ -113,7 +118,7 @@ header{
     width: 50%;
     font-family: 'Poppins', sans-serif;
     font-weight: 100;
-    padding: 7em 0 5em 12em;
+    margin-left: 7em;
 }
 
 .reasons > h2{
@@ -132,21 +137,57 @@ header{
 }
 
 .imagen_parte1{
-    margin-top: 5%;
-    margin-left: 2%;
+    margin-right: 7em;
 }
 
 .parallax{
-    height: 25em;
+    height: 30em;
     width: 100%;
     background: url(img/parallux-bg.jpg);
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+}
+
+.img_mountain{
+    width: 100%;
 }
 
 .images{
     height: 55em;
     width: 100%;
     background-color: #ffffff;
+}
+
+.parallax_text{
+    color: #ffffff;
+    width: 50%;
+    padding-left: 10em;
+    margin-right: 7em;
+    z-index: 2;
+}
+
+.parallax_text h2{
+    font-weight: 100;
+}
+
+.container_parallax{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    height: 100%;
+}
+
+.parallax_text span{
+    font-weight: bold;
+}
+
+.parallax::before{
+    width: 80%;
+    height: 30em;
+    content: "";
+    background-color: #000000;
+    opacity: 0.3;
+    position: absolute;
 }
