--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     font-family: 'Poppins', sans-serif;
     color: #777777;
     font-weight: 400;
+    font-size: 14px;
 }
 
 .banner-area{
@@ -21,14 +22,18 @@ body{
     background: url(img/snow_london_g_hd.jpg);
     background-size: cover;
     display: flex;
+    flex-direction: column;
+    background-position: center;
     overflow: hidden;
 }
 
-.overlay{
-    background-image: -webkit-linear-gradient(0deg,#3224b0 50%,#be5ede 100%);
-    opacity: .7;
-    flex: 1;
-    margin-left: -162%;
+.banner-area::before{
+    width: 80%;
+    height: 35em;
+    content: "";
+    background-image: -webkit-linear-gradient(0deg,#3224b0 0%,#be5ede 100%);
+    opacity: 0.7;
+    position: absolute;
 }
 
 header{
@@ -42,6 +47,7 @@ header{
     align-items: center;
     justify-content: center;
     height: 100%;
+    width: 100%;
 }
 
 .logo{
@@ -69,11 +75,13 @@ header{
 }
 
 .titulo{
-    margin-top: 14em; 
-    margin-left: -62%;
-    z-index: 3;
+    height: 100%; 
+    z-index: 2;
     color: #ffffff;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .titulo h4{
@@ -85,8 +93,7 @@ header{
 .titulo h1{
     font-family: 'Poppins', sans-serif;
     font-weight: 100;
-    font-size: 5em;
-    font-style: thin;
+    font-size: 7em;
     margin: -10px auto;
 }
 
@@ -98,14 +105,13 @@ header{
     color: #ffffff;
     cursor: pointer;
     font-weight: 500;
-    padding: 1em 2.5em;
+    padding: 0.5em 2em;
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
 }
 
 .mod{
-    padding: 1em 2.5em;
-    background-image: -webkit-linear-gradient(0deg,#3224b0 50%,#be5ede 100%);
+    background-image: -webkit-linear-gradient(0deg,#3224b0 0%,#be5ede 100%);
 }
 
 .parte_uno{
@@ -118,7 +124,8 @@ header{
     width: 50%;
     font-family: 'Poppins', sans-serif;
     font-weight: 100;
-    margin-left: 7em;
+    margin-left: 14em;
+    margin-right: 2em;
 }
 
 .reasons > h2{
@@ -137,7 +144,7 @@ header{
 }
 
 .imagen_parte1{
-    margin-right: 7em;
+    margin-right: 14em;
 }
 
 .parallax{
@@ -170,6 +177,7 @@ header{
 
 .parallax_text h2{
     font-weight: 100;
+    font-size: 36px;
 }
 
 .container_parallax{
@@ -190,4 +198,204 @@ header{
     background-color: #000000;
     opacity: 0.3;
     position: absolute;
+}
+
+.grid-container{
+    display: grid;
+    height: 100%;
+    grid-template-columns: repeat(2,30%);
+    grid-column-gap: 25px;
+    grid-row-gap: 25px;
+    width: 100%;
+    justify-content: center;
+}
+
+.grid-container .grid-item1{
+    align-self: end;
+}
+
+.grid-container .grid-item2{
+    align-self: end;
+}
+
+.grid-container .grid-item3{
+    align-self: start;
+}
+
+.grid-container .grid-item4{
+    align-self: start;
+}
+
+.grid-container img{
+    width: 100%;
+}
+
+.contact-us{
+    height: 30em;
+    background: url(img/contact-bg.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.contact-us::before{
+    width: 80%;
+    height: 30em;
+    content: "";
+    background-image: -webkit-linear-gradient(0deg,#3224b0 50%,#be5ede 100%);
+    opacity: 0.7;
+    position: absolute;
+}
+
+.container-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 0 15px;
+}
+
+.info-form{
+    z-index: 2;
+    color: #ffffff;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.info-form h2{
+    font-weight: 100;
+    text-align: center;
+    font-size: 36px;
+    margin: 0;
+}
+
+.info-form p{
+    margin: 0;
+}
+
+.info-form span{
+    font-weight: bold;
+}
+
+.user-info{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.user-info input[type='text']{
+    width:30%;
+    background-color: transparent;
+    border: 1px solid #8373ca;
+    line-height: 48px;
+    color: #ffffff;
+    font-family: 'Poppins', sans-serif;
+    padding: 0 25px;
+    margin: 1em 1em;
+    font-size: 14px;
+}
+
+.user-info input[type='text']::placeholder{
+    color: #ffffff;
+    font-family: 'Poppins', sans-serif;
+}
+
+.user-info input[type='text']:focus::-webkit-input-placeholder{
+    color: transparent;
+}
+
+.formulario{
+    z-index: 2;
+    width: 100%;
+}
+
+.mensaje{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.textarea{
+    width: calc(2em + 60%);
+    height: 150px;
+    background-color: transparent;
+    border: 1px solid #8373ca;
+    color: #ffffff;
+    font-family: 'Poppins', sans-serif;
+    padding: 15px 25px;
+    font-size: 14px;
+    resize: none;
+}
+
+.textarea::placeholder{
+    color: #ffffff;
+    font-family: 'Poppins', sans-serif;
+}
+
+.textarea:focus::-webkit-input-placeholder{
+    color: transparent;
+}
+
+.btnform{
+    margin-top: 15px;
+    margin-right: 19%;
+    background-color: #ffffff;
+    justify-content: flex-end;
+    color: #000;
+    align-self: flex-end;
+}
+
+.suscribe{
+    height: 23em;
+    background-color: #f9f9ff;
+    display: flex;
+    align-items: center;
+}
+
+.container-sus{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+.sus-text{
+    width: 50%;
+    text-align: center;
+}
+
+.sus-text h2{
+    font-weight: 100;
+    font-size: 36px;
+}
+
+.sus-text span{
+    font-weight: bold;
+    color: #000;
+}
+
+.email{
+    width: 100%;
+    font-weight: 300;
+    color: #000;
+    line-height: 50px;
+    padding: 0 180px 0 25px;
+    border:none;
+    border-radius: 25px;
+}
+
+.email::placeholder{
+    color: #777777;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+}
+
+.email:focus::-webkit-input-placeholder{
+    color: transparent;
+}
+
+.sus-text input[type="button"]{
+    justify-self: flex-start;
 }
